--- a/public/style/style.css
+++ b/public/style/style.css
@@ -8,7 +8,7 @@ h2{
     color: #575ed8;
 }
 
-#mario-chat{
+#chat{
     max-width: 600px;
     margin: 30px auto;
     border: 1px solid #ddd;
@@ -36,7 +36,8 @@ h2{
 }
 
 #output strong{
-    color: #575ed8;
+	color: #575ed8;
+	padding-right: 2em;
 }
 
 label{
